[JSC] Public class field should accept "static" as field name https://bugs.webkit.org/show_bug.cgi?id=209703

Reviewed by Ross Kirsling.

JSTests:

* stress/class-fields-with-special-names.js: Added.

Source/JavaScriptCore:

It allows class fields being created using "static" as identifier
(https://tc39.es/ecma262/#prod-IdentifierName).

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseClass):


Canonical link: https://commits.webkit.org/222681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259216 268f45cc-cd09-0410-ab3c-d52691b4dbfc